force-app/main/default/objects/ISANS_Program_Eligibility_Rule__c/ISANS_Program_Eligibility_Rule__c.object-meta.xml
<CustomObject>
    <description>Demo-friendly data-driven eligibility rules per Program (age and/or income). See docs/09-demo-eligibility-lite-architecture.md</description>
    <label>ISANS Program Eligibility Rule</label>
    <nameField>
        <displayFormat>IER-{00000}</displayFormat>
        <label>Rule Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ISANS Program Eligibility Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>