force-app/main/default/objects/ISANS_Program_Eligibility_Rule__c/fields/Failure_Message__c.field-meta.xml
<CustomField>
    <fullName>Failure_Message__c</fullName>
    <description>Shown when this rule fails.</description>
    <label>Failure Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>