force-app/main/default/objects/ISANS_Program_Eligibility_Rule__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Inactive rules are ignored.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>