force-app/main/default/objects/ISANS_Program_Eligibility_Rule__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Program this rule applies to.</description>
    <label>Program</label>
    <referenceTo>Program</referenceTo>
    <relationshipLabel>ISANS Eligibility Rules</relationshipLabel>
    <relationshipName>ISANS_Eligibility_Rules</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>