force-app/main/default/objects/ISANS_Program_Eligibility_Rule__c/fields/Rule_Type__c.field-meta.xml
<CustomField>
    <fullName>Rule_Type__c</fullName>
    <description>Which check to run against the client.</description>
    <label>Rule Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Max_Age_Exclusive</fullName>
                <label>Maximum age (exclusive)</label>
            </value>
            <value>
                <fullName>Min_Age_Inclusive</fullName>
                <label>Minimum age (inclusive)</label>
            </value>
            <value>
                <fullName>Max_Annual_Income</fullName>
                <label>Maximum annual household income</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>