force-app/main/default/objects/ISANS_Program_Eligibility_Rule__c/fields/Sequence__c.field-meta.xml
<CustomField>
    <fullName>Sequence__c</fullName>
    <description>Lower numbers run first (v1: all rules AND together).</description>
    <label>Sequence</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>