force-app/main/default/objects/ISANS_Program_Eligibility_Rule__c/fields/Threshold_Number__c.field-meta.xml
<CustomField>
    <fullName>Threshold_Number__c</fullName>
    <description>For age rules: whole years. For income: same currency as Account field.</description>
    <label>Threshold</label>
    <precision>16</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>